fixed ui issues and alignments in pricing

--- a/findly-builder/src/app/components/app-menu/app-menu.component.scss
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.scss
@@ -495,6 +495,33 @@ app-mainmenu{
 		font-size: 12px;
 		line-height: 20px;
 		margin-bottom: 5px;
+		position: relative;		
+		.progress{
+			height: 2px !important;
+			position: absolute;
+			left: 0;
+			width: 100%;
+			bottom: 0;
+			background-color: transparent;
+			border-radius: 0;
+			.progress-bar{
+				background: #0D6EFD !important;
+			}
+		}
+		.query-limited-reached{
+			.progress{
+				height: 2px !important;
+				position: absolute;
+				left: 0;
+				width: 100%;
+				bottom: 0;
+				background-color: transparent;
+				border-radius: 0;
+				.progress-bar{
+					background: #B893F2 !important;
+				}
+			}
+		}
 	}
 
 }
